# mindmap

./: Cargo.toml  LICENSE.txt  README.md
src/: config.rs  database.rs  embeddings.rs  files.rs  formatter.rs  lib.rs  main.rs  search.rs  server.rs  setup.rs  utils.rs  watcher.rs
