[package]
name = "mindmap"
version = "0.1.0"
edition = "2021"
description = "Search your notes at the speed of thought"
authors = ["Daniel Melchor <dmh672@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
rust-bert = "0.22.0"
